changed potentialWorkersList realization